ch_19_adv_features : rev 3 super traits

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_19_advanced_features.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_19_advanced_features.ipynb
@@ -1659,6 +1659,442 @@
     "\n",
     "> Filename: src/main.rs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A baby dog is called a Spot\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trait Animal {\n",
+    "    fn baby_name() -> String;\n",
+    "}\n",
+    "\n",
+    "struct Dog {}\n",
+    "\n",
+    "impl Dog {\n",
+    "    fn baby_name() -> String {\n",
+    "        String::from(\"Spot\")\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "impl Animal for Dog {\n",
+    "    fn baby_name() -> String {\n",
+    "        String::from(\"puppy\")\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    println!(\"A baby dog is called a {}\", Dog::baby_name());\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 19-19: A trait with an associated function and a type with an associated  \n",
+    "function of the same name that also implements the trait\n",
+    "\n",
+    "We implement the code for naming all puppies Spot in the baby_name associated  \n",
+    "function that is defined on Dog. The Dog type also implements the trait Animal,  \n",
+    "which describes characteristics that all animals have. Baby dogs are called  \n",
+    "puppies, and that is expressed in the implementation of the Animal trait on Dog  \n",
+    "in the baby_name function associated with the Animal trait.\n",
+    "\n",
+    "In main, we call the Dog::baby_name function, which calls the associated  \n",
+    "function defined on Dog directly. This code prints the following:\n",
+    "\n",
+    "```sh\n",
+    "$ cargo run\n",
+    "   Compiling traits-example v0.1.0 (file:///projects/traits-example)\n",
+    "    Finished dev [unoptimized + debuginfo] target(s) in 0.54s\n",
+    "     Running `target/debug/traits-example`\n",
+    "A baby dog is called a Spot\n",
+    "```\n",
+    "\n",
+    "This output isn’t what we wanted. We want to call the baby_name function that  \n",
+    "is part of the Animal trait that we implemented on Dog so the code prints A  \n",
+    "baby dog is called a puppy. The technique of specifying the trait name that we  \n",
+    "used in Listing 19-18 doesn’t help here; if we change main to the code in  \n",
+    "Listing 19-20, we’ll get a compilation error.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "cannot call associated function on trait without specifying the corresponding `impl` type",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[E0790] Error:\u001b[0m cannot call associated function on trait without specifying the corresponding `impl` type",
+      "   \u001b[38;5;246m╭\u001b[0m\u001b[38;5;246m─\u001b[0m\u001b[38;5;246m[\u001b[0mcommand_3:1:1\u001b[38;5;246m]\u001b[0m",
+      "   \u001b[38;5;246m│\u001b[0m",
+      " \u001b[38;5;246m2 │\u001b[0m \u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mp\u001b[0m\u001b[38;5;249mr\u001b[0m\u001b[38;5;249mi\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249mt\u001b[0m\u001b[38;5;249ml\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249m!\u001b[0m\u001b[38;5;249m(\u001b[0m\u001b[38;5;249m\"\u001b[0m\u001b[38;5;249mA\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mb\u001b[0m\u001b[38;5;249ma\u001b[0m\u001b[38;5;249mb\u001b[0m\u001b[38;5;249my\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249md\u001b[0m\u001b[38;5;249mo\u001b[0m\u001b[38;5;249mg\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mi\u001b[0m\u001b[38;5;249ms\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mc\u001b[0m\u001b[38;5;249ma\u001b[0m\u001b[38;5;249ml\u001b[0m\u001b[38;5;249ml\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249md\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249ma\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m{\u001b[0m\u001b[38;5;249m}\u001b[0m\u001b[38;5;249m\"\u001b[0m\u001b[38;5;249m,\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;54mA\u001b[0m\u001b[38;5;54mn\u001b[0m\u001b[38;5;54mi\u001b[0m\u001b[38;5;54mm\u001b[0m\u001b[38;5;54ma\u001b[0m\u001b[38;5;54ml\u001b[0m\u001b[38;5;54m:\u001b[0m\u001b[38;5;54m:\u001b[0m\u001b[38;5;54mb\u001b[0m\u001b[38;5;54ma\u001b[0m\u001b[38;5;54mb\u001b[0m\u001b[38;5;54my\u001b[0m\u001b[38;5;54m_\u001b[0m\u001b[38;5;54mn\u001b[0m\u001b[38;5;54ma\u001b[0m\u001b[38;5;54mm\u001b[0m\u001b[38;5;54me\u001b[0m\u001b[38;5;249m(\u001b[0m\u001b[38;5;249m)\u001b[0m\u001b[38;5;249m)\u001b[0m\u001b[38;5;249m;\u001b[0m",
+      " \u001b[38;5;246m  ·\u001b[0m                                           \u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m┬\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m  ",
+      " \u001b[38;5;246m  ·\u001b[0m                                                   \u001b[38;5;54m╰\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m cannot call associated function of trait",
+      "\u001b[38;5;246m───╯\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    println!(\"A baby dog is called a {}\", Animal::baby_name());\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 19-20: Attempting to call the baby_name function from the Animal  \n",
+    "trait, but Rust doesn’t know which implementation to use\n",
+    "\n",
+    "Because Animal::baby_name doesn’t have a self parameter, and there could be  \n",
+    "other types that implement the Animal trait, Rust can’t figure out which  \n",
+    "implementation of Animal::baby_name we want. We’ll get this compiler error:\n",
+    "\n",
+    "```sh\n",
+    "$ cargo run\n",
+    "   Compiling traits-example v0.1.0 (file:///projects/traits-example)\n",
+    "error[E0790]: cannot call associated function on trait without specifying the corresponding `impl` type\n",
+    "  --> src/main.rs:20:43\n",
+    "   |\n",
+    "2  |     fn baby_name() -> String;\n",
+    "   |     ------------------------- `Animal::baby_name` defined here\n",
+    "...\n",
+    "20 |     println!(\"A baby dog is called a {}\", Animal::baby_name());\n",
+    "   |                                           ^^^^^^^^^^^^^^^^^ cannot call associated function of trait\n",
+    "   |\n",
+    "help: use the fully-qualified path to the only available implementation\n",
+    "   |\n",
+    "20 |     println!(\"A baby dog is called a {}\", <Dog as Animal>::baby_name());\n",
+    "   |                                           +++++++       +\n",
+    "\n",
+    "For more information about this error, try `rustc --explain E0790`.\n",
+    "error: could not compile `traits-example` due to previous error\n",
+    "```\n",
+    "\n",
+    "To disambiguate and tell Rust that we want to use the implementation of Animal  \n",
+    "for Dog as opposed to the implementation of Animal for some other type, we need  \n",
+    "to use fully qualified syntax. Listing 19-21 demonstrates how to use fully  \n",
+    "qualified syntax.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A baby dog is called a puppy\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\n",
+    "    println!(\"A baby dog is called a {}\", <Dog as Animal>::baby_name());\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 19-21: Using fully qualified syntax to specify that we want to call  \n",
+    "the baby_name function from the Animal trait as implemented on Dog\n",
+    "\n",
+    "We’re providing Rust with a type annotation within the angle brackets, which  \n",
+    "indicates we want to call the baby_name method from the Animal trait as  \n",
+    "implemented on Dog by saying that we want to treat the Dog type as an Animal  \n",
+    "for this function call. This code will now print what we want:\n",
+    "\n",
+    "```sh\n",
+    "$ cargo run\n",
+    "   Compiling traits-example v0.1.0 (file:///projects/traits-example)\n",
+    "    Finished dev [unoptimized + debuginfo] target(s) in 0.48s\n",
+    "     Running `target/debug/traits-example`\n",
+    "A baby dog is called a puppy\n",
+    "```\n",
+    "\n",
+    "In general, fully qualified syntax is defined as follows:\n",
+    "\n",
+    "- `<Type as Trait>`::function(receiver_if_method, next_arg, ...);\n",
+    "\n",
+    "For associated functions that aren’t methods, there would not be a receiver:  \n",
+    "there would only be the list of other arguments. You could use fully qualified  \n",
+    "syntax everywhere that you call functions or methods. However, you’re allowed  \n",
+    "to omit any part of this syntax that Rust can figure out from other information  \n",
+    "in the program. You only need to use this more verbose syntax in cases where  \n",
+    "there are multiple implementations that use the same name and Rust needs help  \n",
+    "to identify which implementation you want to call."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using Supertraits to Require One Trait's Functionality Within Another Trait\n",
+    "\n",
+    "Sometimes, you might write a trait definition that depends on another trait:  \n",
+    "\n",
+    "- for a type to implement the first trait,  \n",
+    "- you want to require that type to also implement the second trait.  \n",
+    "\n",
+    "You would do this so that your trait definition can make use of the associated  \n",
+    "items of the second trait. The trait your trait definition is relying on is  \n",
+    "called a supertrait of your trait.\n",
+    "\n",
+    "For example, let’s say we want to make an :  \n",
+    "\n",
+    "- OutlinePrint trait with an outline_print method  \n",
+    "- that will print a given value formatted so that it's framed in asterisks.  \n",
+    "\n",
+    "That is, given a Point struct that implements the standard library trait  \n",
+    "Display to result in (x, y), when we call outline_print on a Point instance  \n",
+    "that has 1 for x and 3 for y, it should print the following:\n",
+    "\n",
+    "```sh\n",
+    "**********\n",
+    "*        *\n",
+    "* (1, 3) *\n",
+    "*        *\n",
+    "**********\n",
+    "```\n",
+    "\n",
+    "In the implementation of the outline_print method, we want to use the Display  \n",
+    "trait’s functionality. Therefore, we need to specify that the OutlinePrint  \n",
+    "trait will work only for types that also implement Display and provide the  \n",
+    "functionality that OutlinePrint needs. We can do that in the trait definition  \n",
+    "by specifying OutlinePrint: Display. This technique is similar to adding a  \n",
+    "trait bound to the trait.  \n",
+    "\n",
+    "> Listing 19-22 shows an implementation of the OutlinePrint trait.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "use std::fmt;\n",
+    "use std::sync::Mutex;\n",
+    "\n",
+    "trait OutlinePrint: fmt::Display {\n",
+    "    fn outline_print(&self) {\n",
+    "        // synchronize access to stdout @audit ?\n",
+    "        // does this need to be at the begining of the function?\n",
+    "        let mutex = Mutex::new(());\n",
+    "        let _lock = mutex.lock().unwrap();\n",
+    "\n",
+    "        // no ... it still randomizes the output ... NOPE LOL\n",
+    "        let output = self.to_string();\n",
+    "        let len = output.len();\n",
+    "\n",
+    "        // what if we capture the var and do no calc? ... NOPE LOL\n",
+    "        let outer = \"*\".repeat(len + 4);\n",
+    "        let inner = \" \".repeat(len + 2);\n",
+    "\n",
+    "        // @audit - figure out how to print serialized NOT randomized\n",
+    "        println!(\"{}\", outer);\n",
+    "        println!(\"*{}*\", inner);\n",
+    "        println!(\"* {} *\", output);\n",
+    "        println!(\"*{}*\", inner);\n",
+    "        println!(\"{}\", outer);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 19-22: Implementing the OutlinePrint trait that requires the \n",
+    "functionality from Display\n",
+    "\n",
+    "Because we’ve specified that :  \n",
+    "\n",
+    "- OutlinePrint requires the Display trait,  \n",
+    "- we can use the to_string function that is automatically implemented for any  \n",
+    "type that implements Display.  \n",
+    "\n",
+    "If we tried to use to_string without adding a colon and specifying the Display  \n",
+    "trait after the trait name, we’d get an error saying that no method named  \n",
+    "to_string was found for the type &Self in the current scope.\n",
+    "\n",
+    "Let’s see what happens when we try to implement OutlinePrint on a type that  \n",
+    "doesn’t implement Display, such as the Point struct:\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "struct Point {\n",
+    "    x: i32,\n",
+    "    y: i32,\n",
+    "}\n",
+    "\n",
+    "// impl OutlinePrint for Point {}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We get an error saying that Display is required but not implemented:\n",
+    "\n",
+    "```sh\n",
+    "$ cargo run\n",
+    "   Compiling traits-example v0.1.0 (file:///projects/traits-example)\n",
+    "error[E0277]: `Point` doesn't implement `std::fmt::Display`\n",
+    "  --> src/main.rs:20:6\n",
+    "   |\n",
+    "20 | impl OutlinePrint for Point {}\n",
+    "   |      ^^^^^^^^^^^^ `Point` cannot be formatted with the default formatter\n",
+    "   |\n",
+    "   = help: the trait `std::fmt::Display` is not implemented for `Point`\n",
+    "   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead\n",
+    "note: required by a bound in `OutlinePrint`\n",
+    "  --> src/main.rs:3:21\n",
+    "   |\n",
+    "3  | trait OutlinePrint: fmt::Display {\n",
+    "   |                     ^^^^^^^^^^^^ required by this bound in `OutlinePrint`\n",
+    "\n",
+    "For more information about this error, try `rustc --explain E0277`.\n",
+    "error: could not compile `traits-example` due to previous error\n",
+    "```\n",
+    "\n",
+    "To fix this, we implement Display on Point and satisfy the constraint that  \n",
+    "OutlinePrint requires, like so:\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "use std::fmt;\n",
+    "\n",
+    "impl fmt::Display for Point {\n",
+    "    fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {\n",
+    "        write!(f, \"({}, {})\", self.x, self.y)\n",
+    "    }\n",
+    "}\n",
+    "    \n",
+    "// @audit - running twice causes error - why?\n",
+    "impl OutlinePrint for Point {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*               *\n",
+      "*****************\n",
+      "* (19999, 8888) *\n",
+      "*               *\n",
+      "*****************\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\n",
+    "    let p = Point { x: 19999, y: 8888 };\n",
+    "    p.outline_print();\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
