ch_18_pmatching - refeed 5 match guard code

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_18_patterns_and_matching.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_18_patterns_and_matching.ipynb
@@ -147,11 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -257,11 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -336,11 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -454,11 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -521,11 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "Error",
@@ -594,11 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -652,11 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -804,11 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "Error",
@@ -931,11 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -989,11 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1113,11 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1178,11 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1308,11 +1260,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1405,11 +1353,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1443,11 +1387,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1505,11 +1445,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1593,11 +1529,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1673,11 +1605,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1763,11 +1691,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1880,11 +1804,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1992,11 +1912,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2059,11 +1975,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2147,11 +2059,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2234,11 +2142,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2311,11 +2215,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2364,11 +2264,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "Error",
@@ -2437,11 +2333,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2510,11 +2402,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2579,11 +2467,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2642,11 +2526,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "Error",
@@ -2748,11 +2628,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2792,7 +2668,7 @@
     "        // of any type that implements the `Option` enum.\n",
     "    }\n",
     "\n",
-    "}\n"
+    "}"
    ]
   },
   {
@@ -2832,22 +2708,22 @@
     "- when match guard expressions are involved.\n",
     "\n",
     "In Listing 18-11, we mentioned that we could use match guards to solve our  \n",
-    "pattern-shadowing problem. Recall that we created a new variable inside the  \n",
-    "pattern in the match expression instead of using the variable outside the  \n",
-    "match. That new variable meant we couldn’t test against the value of the outer  \n",
-    "variable. Listing 18-27 shows how we can use a match guard to fix this problem.\n",
+    "pattern-shadowing problem. Recall that we : \n",
+    "\n",
+    "- created a new variable inside the pattern in the match expression  \n",
+    "- instead of using the variable outside the match.  \n",
+    "- That new variable meant we couldn’t test against the value of the outer  \n",
+    "variable.  \n",
+    "\n",
+    "> Listing 18-27 shows how we can use a match guard to fix this problem.\n",
     "\n",
     "> Filename: src/main.rs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2863,7 +2739,7 @@
        "()"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2895,23 +2771,32 @@
    "source": [
     "> Listing 18-27: Using a match guard to test for equality with an outer variable\n",
     "\n",
-    "This code will now print Default case, x = Some(5). The pattern in the :  \n",
+    "This code will now print `Default case, x = Some(5)`. \n",
     "\n",
-    "- second match arm doesn’t introduce a new variable y  \n",
-    "- that would shadow the outer y,  \n",
-    "- meaning we can use the outer y in the match guard. \n",
-    "- Instead of specifying the pattern as Some(y), \n",
-    "- which would have shadowed the outer y, \n",
+    "The pattern in the :  \n",
     "\n",
-    "We specify Some(n). \n",
-    "- This creates a new variable n that doesn’t shadow anything \n",
-    "- because there is no n variable outside the match.\n",
+    "- second match arm doesn’t introduce a new variable `y`  \n",
+    "- that would `shadow the outer y`,  \n",
+    "- meaning we `can use the outer y` in the match guard.\n",
     "\n",
-    "The match guard if n == y is not a pattern and therefore doesn’t introduce new  \n",
-    "variables. This y is the outer y rather than a new shadowed y, and we can look  \n",
-    "for a value that has the same value as the outer y by comparing n to y.\n",
+    "#### -- Match Guard enables comparing inner var vs outer var --\n",
     "\n",
-    "You can also use the or operator | in a match guard to specify multiple  \n",
+    "Instead of specifying the pattern as `Some(y)`, \n",
+    "\n",
+    "- which would have shadowed the outer `y`, \n",
+    "- we specify `Some(n)`. \n",
+    "- This creates a new variable `n that doesn’t shadow` anything \n",
+    "- because there is no `n` variable outside the match.\n",
+    "\n",
+    "The match guard if `n == y` is `not a pattern` and therefore doesn’t introduce  \n",
+    "new variables. \n",
+    "\n",
+    "- This `y` is the outer `y`  \n",
+    "- rather than a new `shadowed y`, and  \n",
+    "- we can look for a value that has the same value as the outer `y` by comparing \n",
+    "`n to y`.\n",
+    "\n",
+    "You can also use the `or operator |` in a match guard to specify multiple  \n",
     "patterns; the match guard condition will apply to all the patterns.  \n",
     "\n",
     "> Listing 18-28 shows the precedence when combining a pattern that uses | with  \n",
@@ -2921,12 +2806,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2941,7 +2822,7 @@
        "()"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2949,10 +2830,15 @@
    "source": [
     "{\n",
     "\n",
-    "    let x = 4;\n",
+    "    let x = 6;\n",
     "    let y = false;\n",
     "\n",
     "    // @audit : Explain what is happening here\n",
+    "    // ANSWER :\n",
+    "    // The precedence of the match guard is :\n",
+    "    // - (4 | 5 | 6) if y // this\n",
+    "    // - 4 | 5 | (6 if y) // NOT this\n",
+    "    // else if 6 would have printed 'yes' instead of 'no'\n",
     "    match x {\n",
     "        4 | 5 | 6 if y => println!(\"yes\"),\n",
     "        _ => println!(\"no\"),\n",
@@ -2969,23 +2855,27 @@
     "\n",
     "The match condition states that the arm only matches :  \n",
     "\n",
-    "- if the value of x is equal to 4, 5, or 6  \n",
-    "- and if y is true.  \n",
+    "- if the value of `x` is equal to `4, 5, or 6` \n",
+    "- `and` if `y is true`.  \n",
     "\n",
     "When this code runs :  \n",
     "\n",
-    "- the pattern of the first arm matches because x is 4,  \n",
-    "- but the match guard if y is false,  \n",
-    "- so the first arm is not chosen.  \n",
+    "- the pattern of the first arm `matches` because `x is 4`,  \n",
+    "- but the match guard `if y is false`,  \n",
+    "- so the `first arm is not` chosen.  \n",
     "\n",
     "The code moves on to the second arm :  \n",
     "\n",
     "- which does match, and \n",
-    "- this program prints no.  \n",
+    "- this program `prints no`.  \n",
     "\n",
-    "The reason is that the if condition applies to the whole pattern 4 | 5 | 6,  \n",
-    "not only to the last value 6. In other words, the precedence of a match guard  \n",
-    "in relation to a pattern behaves like this:\n",
+    "The reason is that :  \n",
+    "\n",
+    "- the `if` condition applies to the whole pattern `4 | 5 | 6`,  \n",
+    "- not only to the last value `6`. \n",
+    "\n",
+    "In other words, the precedence of a match guard in relation to a pattern  \n",
+    "behaves like this:\n",
     "\n",
     "```rust\n",
     "(4 | 5 | 6) if y => ...\n",
@@ -2999,9 +2889,9 @@
     "\n",
     "After running the code, the precedence behavior is evident:  \n",
     "\n",
-    "- if the match guard were applied only to the final value in the list of values  \n",
-    "specified using the | operator,  \n",
-    "- the arm would have matched and the program would have printed yes."
+    "- if the match guard were applied only to the `final value` in the list of  \n",
+    "values specified using the | operator,  \n",
+    "- the arm would have matched and the program `would have printed yes`."
    ]
   },
   {
@@ -3021,11 +2911,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -3123,7 +3009,7 @@
    "codemirror_mode": "rust",
    "file_extension": ".rs",
    "mimetype": "text/rust",
-   "name": "Rust",
+   "name": "rust",
    "pygment_lexer": "rust",
    "version": ""
   },
