--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_19_advanced_features.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_19_advanced_features.ipynb
@@ -10,20 +10,31 @@
     "\n",
     "By now, you’ve learned the most commonly used parts of the Rust programming  \n",
     "language. Before we do one more project in Chapter 20, we’ll look at a few  \n",
-    "aspects of the language you might run into every once in a while, but may not  \n",
-    "use every day. You can use this chapter as a reference for when you encounter  \n",
-    "any unknowns. The features covered here are useful in very specific situations.  \n",
-    "Although you might not reach for them often, we want to make sure you have a  \n",
-    "grasp of all the features Rust has to offer.\n",
+    "aspects of the language :  \n",
+    "\n",
+    "- you might run into every once in a while,  \n",
+    "- but may not use every day.  \n",
+    "\n",
+    "You can use this chapter as a reference for when you encounter any unknowns.  \n",
+    "The features covered here are useful in very specific situations. Although you  \n",
+    "might not reach for them often, we want to make sure you have a grasp of all  \n",
+    "the features Rust has to offer.\n",
     "\n",
     "In this chapter, we’ll cover:\n",
     "\n",
     "- **`Unsafe Rust:`** how to opt out of some of Rust’s guarantees and take  \n",
     "responsibility for manually upholding those guarantees\n",
-    "- **`Advanced traits:`** associated types, default type parameters, fully  \n",
-    "qualified syntax, supertraits, and the newtype pattern in relation to traits\n",
-    "- **`Advanced types:`** more about the newtype pattern, type aliases, the never  \n",
-    "type, and dynamically sized types\n",
+    "- **`Advanced traits:`** \n",
+    "    - associated types, \n",
+    "    - default type parameters, \n",
+    "    - fully qualified syntax,  \n",
+    "    - supertraits,  \n",
+    "    - and the newtype pattern in relation to traits\n",
+    "- **`Advanced types:`** more about :  \n",
+    "    - the newtype pattern, \n",
+    "    - type aliases, \n",
+    "    - the never type, \n",
+    "    - and dynamically sized types\n",
     "- **`Advanced functions and closures:`** function pointers and returning  \n",
     "closures  \n",
     "- **`Macros:`** ways to define code that defines more code at compile time  \n",
@@ -38,13 +49,16 @@
     "### Unsafe Rust\n",
     "\n",
     "All the code we’ve discussed so far has had Rust’s memory safety guarantees  \n",
-    "enforced at compile time. However, Rust has a second language hidden inside it  \n",
-    "that doesn’t enforce these memory safety guarantees:  \n",
+    "enforced at compile time. However, Rust has a **`second language hidden`**  \n",
+    "inside it that **`doesn’t enforce these memory safety`**` guarantees:  \n",
     "\n",
-    "- it’s called unsafe Rust and works just like regular Rust, but gives us extra  \n",
-    "superpowers.\n",
+    "- it’s called **`unsafe Rust`** and works just like regular Rust, but gives us  \n",
+    "**`extra superpowers`**.\n",
     "\n",
-    "**`Unsafe Rust`** exists because, by nature, static analysis is conservative.  \n",
+    "#### -- Unsafe Exists : Hardware and Static Check is Conservative --\n",
+    "\n",
+    "**`Unsafe Rust`** exists because :  \n",
+    "- by nature, static analysis is conservative.  \n",
     "When the compiler tries to determine whether or not code upholds the guarantees,  \n",
     "it’s better for it to reject some valid programs than to accept some invalid  \n",
     "programs. Although the code might be okay, if the Rust compiler doesn’t have  \n",
@@ -52,16 +66,22 @@
     "you can use unsafe code to tell the compiler, “Trust me, I know what I’m doing.”  \n",
     "Be warned, however, that you use unsafe Rust at your own risk:  \n",
     "\n",
-    "- if you use unsafe code incorrectly, problems can occur due to memory unsafety,  \n",
-    "such as null pointer dereferencing.\n",
+    "- if you use unsafe code incorrectly,  \n",
+    "- problems can occur due to memory unsafety,  \n",
+    "- such as null pointer dereferencing.\n",
     "\n",
-    "Another reason Rust has an unsafe alter ego is that the underlying computer  \n",
-    "hardware is inherently unsafe. If Rust didn’t let you do unsafe operations, you  \n",
-    "couldn’t do certain tasks. Rust needs to allow you to do low-level systems  \n",
-    "programming, such as directly interacting with the operating system or even  \n",
-    "writing your own operating system. Working with low-level systems programming is  \n",
-    "one of the goals of the language. Let’s explore what we can do with unsafe Rust  \n",
-    "and how to do it."
+    "Another reason Rust has an unsafe alter ego is that :  \n",
+    "\n",
+    "- the underlying computer **`hardware is inherently unsafe`**.  \n",
+    "\n",
+    "If Rust didn’t let you do `unsafe` operations, you couldn’t do certain tasks.  \n",
+    "Rust needs to allow you to do `low-level systems programming`, such as :  \n",
+    "\n",
+    "- directly interacting with the operating system  \n",
+    "- or even writing your own operating system.  \n",
+    "\n",
+    "Working with low-level systems programming is one of the goals of the language.  \n",
+    "Let’s **`explore what we can do with unsafe`** Rust and how to do it."
    ]
   },
   {
@@ -70,23 +90,33 @@
    "source": [
     "### Unsafe SuperPowers\n",
     "\n",
-    "To switch to unsafe Rust, use the **`unsafe`** keyword and then start a new  \n",
-    "block that holds the unsafe code. You can take five actions in unsafe Rust that  \n",
+    "To switch to unsafe Rust :  \n",
+    "\n",
+    "- use the **`unsafe`** keyword  \n",
+    "- and then start a **`new block`** that holds the unsafe code.  \n",
+    "\n",
+    "You can take five actions in unsafe Rust that  \n",
     "you can’t in safe Rust, which we call unsafe superpowers. Those superpowers  \n",
     "include the ability to:\n",
     "\n",
-    "- Dereference a raw pointer\n",
-    "- Call an unsafe function or method\n",
-    "- Access or modify a mutable static variable\n",
-    "- Implement an unsafe trait\n",
-    "- Access fields of `union`s\n",
+    "- **`Dereference`** a raw pointer\n",
+    "- Call an **`unsafe function or method`**\n",
+    "- Access or **`modify a mutable static`** variable\n",
+    "- Implement an **`unsafe trait`**\n",
+    "- Access **`fields of `union`s`**\n",
     "\n",
-    "It’s important to understand that unsafe doesn’t turn off the borrow checker or  \n",
-    "disable any other of Rust’s safety checks:  \n",
-    "- if you use a reference in unsafe code, it will still be checked.  \n",
-    "The unsafe keyword only gives you access to these five features that are then  \n",
-    "not checked by the compiler for memory safety. You’ll still get some degree of  \n",
-    "safety inside of an unsafe block.\n",
+    "It’s important to understand that unsafe :  \n",
+    "\n",
+    "- **`doesn’t turn off the borrow checker`**  \n",
+    "- or **`disable any other of Rust’s safety checks`**:  \n",
+    "- if you use a reference in unsafe code, **`it will still be checked`**\n",
+    "\n",
+    "The `unsafe` keyword only :  \n",
+    "\n",
+    "- gives you `access` to these `five features`  \n",
+    "- that are then not checked by the compiler for memory safety.  \n",
+    "\n",
+    "You’ll still get some degree of safety inside of an unsafe block.\n",
     "\n",
     "In addition, unsafe does not mean the code inside the block is necessarily  \n",
     "dangerous or that it will definitely have memory safety problems:  \n",
@@ -99,13 +129,19 @@
     "any errors related to memory safety must be within an unsafe block. Keep unsafe  \n",
     "blocks small; you’ll be thankful later when you investigate memory bugs.\n",
     "\n",
-    "To isolate unsafe code as much as possible, it’s best to enclose unsafe code  \n",
-    "within a safe abstraction and provide a safe API, which we’ll discuss later in  \n",
-    "the chapter when we examine unsafe functions and methods. Parts of the standard  \n",
-    "library are implemented as safe abstractions over unsafe code that has been  \n",
-    "audited. Wrapping unsafe code in a safe abstraction prevents uses of unsafe  \n",
-    "from leaking out into all the places that you or your users might want to use  \n",
-    "the functionality implemented with unsafe code, because using a safe abstraction  \n",
+    "To isolate unsafe code as much as possible :  \n",
+    "- it’s best to enclose unsafe code within a safe abstraction and  \n",
+    "- provide a safe API, (which we’ll discuss later in the chapter when we examine  \n",
+    "unsafe functions and methods)\n",
+    "\n",
+    "Parts of the standard library are implemented as :  \n",
+    "\n",
+    "- safe abstractions  \n",
+    "- over unsafe code that has been audited.  \n",
+    "\n",
+    "Wrapping unsafe code in a safe abstraction prevents uses of unsafe from leaking  \n",
+    "out into all the places that you or your users might want to use the  \n",
+    "functionality implemented with unsafe code, because using a safe abstraction  \n",
     "is safe.\n",
     "\n",
     "Let’s look at each of the five unsafe superpowers in turn. We’ll also look at  \n",
@@ -119,25 +155,42 @@
     "### Dereferencing a Raw Pointer\n",
     "\n",
     "In Chapter 4, in the “Dangling References” section, we mentioned that the  \n",
-    "compiler ensures references are always valid. Unsafe Rust has two new types  \n",
-    "called raw pointers that are similar to references. As with references, raw  \n",
-    "pointers can be immutable or mutable and are written as *const T and *mut T,  \n",
-    "respectively. The asterisk isn’t the dereference operator; it’s part of the  \n",
-    "type name. In the context of raw pointers, immutable means that the pointer  \n",
-    "can’t be directly assigned to after being dereferenced.\n",
+    "compiler ensures references are always valid. \n",
     "\n",
-    "Different from references and smart pointers, raw pointers:\n",
+    "Unsafe Rust has two new types called : \n",
+    "- raw pointers that are similar to references.  \n",
     "\n",
-    "- Are allowed to ignore the borrowing rules by having both immutable and  \n",
-    "mutable pointers or multiple mutable pointers to the same location\n",
-    "- Aren’t guaranteed to point to valid memory\n",
-    "- Are allowed to be null\n",
-    "- Don’t implement any automatic cleanup\n",
+    "As with references, raw pointers can be immutable or mutable and are written  \n",
+    "as :  \n",
     "\n",
-    "By opting out of having Rust enforce these guarantees, you can give up  \n",
-    "guaranteed safety in exchange for greater performance or the ability to  \n",
-    "interface with another language or hardware where Rust’s guarantees don’t  \n",
-    "apply.\n",
+    "- `*const T`  \n",
+    "- and `*mut T`,  \n",
+    "\n",
+    "respectively. \n",
+    "\n",
+    "- The `asterisk isn’t the dereference operator`; \n",
+    "- it’s `part of the type name`.  \n",
+    "\n",
+    "In the context of raw pointers :  \n",
+    "\n",
+    "- `immutable` means that the pointer can’t be directly assigned to after being  \n",
+    "dereferenced.\n",
+    "\n",
+    "Different from `references` and `smart pointers`, `raw pointers`:\n",
+    "\n",
+    "- Are allowed to `ignore the borrowing rules` \n",
+    "- by having both `immutable` and `mutable` pointers \n",
+    "- or `multiple mutable pointers` to the same location\n",
+    "- `Aren’t guaranteed` to point to valid memory\n",
+    "- Are `allowed to be null`\n",
+    "- `Don’t` implement any `automatic cleanup`\n",
+    "\n",
+    "By opting out of having Rust enforce these guarantees : \n",
+    "\n",
+    "- you can give up guaranteed safety  \n",
+    "- in exchange for greater performance  \n",
+    "- or the ability to interface with another language or hardware where Rust’s  \n",
+    "guarantees don’t apply.\n",
     "\n",
     "> Listing 19-1 shows how to create an immutable and a mutable raw pointer  \n",
     "from references."
@@ -146,11 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -167,6 +216,8 @@
     "{\n",
     "    let mut num = 5;\n",
     "\n",
+    "    // @audit-ok : the * operator is part of the TYPE NAME\n",
+    "    // - NOT a dereference operator\n",
     "    let r1 = &num as *const i32;\n",
     "    let r2 = &mut num as *mut i32;\n",
     "}"
@@ -199,11 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -219,7 +266,7 @@
    "source": [
     "{\n",
     "    let address = 0x012345usize;\n",
-    "    let r = address as *const i32;\n",
+    "    let r = address as *const i32; \n",
     "}"
    ]
   },
@@ -237,11 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -327,11 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -406,11 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -451,11 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "Error",
@@ -557,11 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "// import slice module from standard library\n",
@@ -645,11 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -758,11 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -847,11 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -880,11 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -941,11 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1026,11 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1143,11 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pub trait Iterator {\n",
@@ -1181,11 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "struct Counter {}\n",
@@ -1213,11 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "Error",
@@ -1306,11 +1297,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1403,11 +1390,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::ops::Add;\n",
@@ -1483,11 +1466,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "trait Pilot {\n",
@@ -1535,11 +1514,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1586,11 +1561,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1663,11 +1634,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1747,11 +1714,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "Error",
@@ -1817,11 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1927,11 +1886,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::fmt;\n",
@@ -1988,11 +1943,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "struct Point {\n",
@@ -2039,11 +1990,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::fmt;\n",
@@ -2061,11 +2008,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2107,7 +2050,7 @@
    "codemirror_mode": "rust",
    "file_extension": ".rs",
    "mimetype": "text/rust",
-   "name": "Rust",
+   "name": "rust",
    "pygment_lexer": "rust",
    "version": ""
   },
